unpackaged/main/default/objects/Custom_Messages__mdt/Custom_Messages__mdt.object-meta.xml
<CustomObject>
    <description>Stores any labels/messages related to object or any other type</description>
    <label>Custom Message</label>
    <pluralLabel>Custom Messages</pluralLabel>
</CustomObject>