unpackaged/main/default/objects/Custom_Messages__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of Metadata like object, custom setting etc</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>