unpackaged/main/default/objects/Custom_Messages__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>255</description>
    <label>Value</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>